--- a/app/src/main/res/layout/activity_bind_device.xml
+++ b/app/src/main/res/layout/activity_bind_device.xml
@@ -47,6 +47,17 @@
             hunt:textSize="@dimen/sp16" />
 
         <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/v_to_bind_panorama_camera"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y67"
+            android:background="@color/color_white"
+            hunt:leftDrawable="@drawable/home_icon_720camera_online"
+            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
+            hunt:text="720°摄像机"
+            hunt:textColor="@color/color_383838"
+            hunt:textSize="@dimen/sp16" />
+
+        <com.cylan.jiafeigou.widget.HomeMineItemView
             android:id="@+id/v_to_bind_doorbell"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y67"
