--- a/app/src/main/res/layout/activity_camera_live.xml
+++ b/app/src/main/res/layout/activity_camera_live.xml
@@ -9,7 +9,7 @@
 
 
     <!--<FrameLayout-->
-    <!--android:id="@+id/fLayout_information_message"-->
+    <!--android:dpMsgId="@+dpMsgId/fLayout_information_message"-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="wrap_content">-->
 
