--- a/app/src/main/res/layout/fragment_camera_live.xml
+++ b/app/src/main/res/layout/fragment_camera_live.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/default_diagram_mask">
 
         <!--<FrameLayout-->
-            <!--android:id="@+id/fLayout_live_view_container"-->
+            <!--android:dpMsgId="@+dpMsgId/fLayout_live_view_container"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent" />-->
 
